tests/ui/rfcs/rfc-2632-const-trait-impl/const-drop-fail.stock.stderr
error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-fail.rs:24:26
   |
LL | const fn check<T: ~const Destruct>(_: T) {}
   |                          ^^^^^^^^

error[E0493]: destructor of `T` cannot be evaluated at compile-time
  --> $DIR/const-drop-fail.rs:24:36
   |
LL | const fn check<T: ~const Destruct>(_: T) {}
   |                                    ^      - value is dropped here
   |                                    |
   |                                    the destructor for this type cannot be evaluated in constant functions

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0493`.
